docs/style.css
/* ... */
body.dark-mode #piano-roll {
    background-color: #333;
}

body:not(.dark-mode) #piano-roll {
    background-color: #ddd;
}

#audio-visualization {
    margin-top: 20px;
}
#waveform-canvas {
    width: 100%;
    height: 200px;
    border: 1px solid #ccc;
}
#visualization-controls {
    margin-top: 10px;
}
#time-display {
    margin-left: 10px;
}

/* bits visualization */
.bits-grid-container {
    display: grid;
    gap: 1px;
    font-family: monospace;
    overflow-x: auto;
    white-space: nowrap;
    padding: 10px;
}

.bit, .symbol, .packed, .annotation {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 2em;
    border: 1px solid var(--border-color);
    overflow: hidden;
    padding: 2px;
    font-size: 0.9em;
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.bit {
    font-size: 0.6em;
}

.annotations-row3 .annotation {
    border-bottom: none;
    margin-bottom: 0;
    /* border-radius: 4px 4px 0 0; */
    background-color: var(--annotation3-bg);
}

.annotations-row4 .annotation {
    border-top: none;
    border-radius: 0 0 4px 4px;
    padding-top: 0;
    margin-top: 0;
    background-color: var(--annotation3-bg);
}

.annotations-row5 .annotation {
    border-top: none;
    padding-top: 0;
    margin-top: 0;
    background-color: var(--annotation-bg);
}


.symbol {
    font-weight: bold;
}

.symbol.costas {
    background-color: var(--costas-bg-bits);
    color: var(--packed-color);
}

.symbol.data {
    background-color: var(--data-bg);
    color: var(--packed-color);
}

.bit-one {
    background-color: var(--bit-one-bg);
    color: var(--packed-color);

}

.bit-zero {
    background-color: var(--bit-zero-bg);
    color: var(--packed-color);
}

.packed {
    background-color: var(--packed-bg);
    color: var(--packed-color);
}

.annotation {
    background-color: var(--annotation-bg);
    color: var(--annotation-color);
    font-size: 0.8em;
}

.highlighted {
    outline: 2px solid var(--highlight-color);
    z-index: 1;
}

.toggle-container {
    margin-bottom: 10px;
}

.toggle-container button {
    margin-right: 10px;
}

/* Dark mode */
@media (prefers-color-scheme: dark) {
    :root {
        --border-color: #555;
        --data-bg: #2c3e50;
        --costas-bg-bits: #34495e;
        --bit-one-bg: #b36954;
        --bit-zero-bg: #4da8ed;
        --packed-bg: #7f8c8d;
        --packed-color: #ecf0f1;
        --annotation-bg: #6e577d;
        --annotation3-bg: #5d577d;
        --annotation-color: #ecf0f1;
        --highlight-color: #f39c12;
    }
}

/* Light mode */
@media (prefers-color-scheme: light) {
    :root {
        --border-color: #ccc;
        --data-bg: #bdc3c7;
        --costas-bg: #ecf0f1;
        --bit-one-bg: #87c5a1;
        --bit-zero-bg: #87c5c0;
        --packed-bg: #95a5a6;
        --packed-color: #2c3e50;
        --annotation-bg: #9b59b6;
        --annotation3-bg: #7e6ab6;
        --annotation-color: #ffffff;
        --highlight-color: #f39c12;
    }
}

/* end of bits visualization */

@media (max-width: 600px) {
    body {
        padding: 10px;
    }

    button {
        width: 100%;
        margin-bottom: 10px;
    }

    #theme-toggle {
        position: static;
        display: block;
        margin-bottom: 20px;
    }
}

/***** output boxes *****/

:root {
/*    --bg-color: #f4f4f4; */
/*    --text-color: #333; */
    --box-bg: #fff;
    --box-shadow: 0 2px 4px rgba(0,0,0,0.1);
    --header-bg: #4a4a4a;
    --header-color: #fff;
    --value-bg: #f9f9f9;
    --check-ok-bg: #d4edda;
    --check-ok-color: #155724;
    --check-error-bg: #f8d7da;
    --check-error-color: #721c24;
}

.dark-mode {
/*    --bg-color: #1a1a1a; */
/*    --text-color: #e0e0e0; */
    --box-bg: #2c2c2c;
    --box-shadow: 0 2px 4px rgba(255,255,255,0.1);
    --header-bg: #3a3a3a;
    --header-color: #fff;
    --value-bg: #383838;
    --check-ok-bg: #1e4620;
    --check-ok-color: #9be9a8;
    --check-error-bg: #4c1d1d;
    --check-error-color: #f8d7da;
}

.container {
    max-width: 800px;
    margin: 0 auto;
}

.output {
    white-space: normal;
}

.output-box {
    background-color: var(--box-bg);
    border-radius: 8px;
    box-shadow: var(--box-shadow);
    margin-top: 35px;
    margin-bottom: 20px;
    overflow: hidden;
    white-space: normal;

}

.output-box h2 {
    background-color: var(--header-bg);
    color: var(--header-color);
    margin: 0;
    padding: 10px 15px;
    font-size: 18px;
    white-space: normal;
}

.output-box pre,
.output-box code,
.output-box .output-value {
    white-space: pre-wrap;
}

.output-subheading {
    background-color: var(--header-bg);
    color: var(--header-color);
    margin: 10px -10px 5px;
    padding: 8px 15px;
    font-size: 16px;
    grid-column: 1 / -1;
}

.output-content {
    padding: 10px;
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 5px 10px;
}

.output-row {
    margin-bottom: 5px;
    display: contents;
    grid-column: 1 / -1;
}

.output-row.plain-text {
    /* grid-column: 1 / -1; */
    padding: 5px 0;
}

.output-row.plain-text .output-value {
    background-color: transparent;
    padding: 0;
    font-family: inherit;
    white-space: normal;
    word-break: normal;
}

.output-label {
    /* font-weight: bold; */
    margin-bottom: 2px;
    padding: 5px 0;
}

.output-value {
    background-color: var(--value-bg);
    padding: 5px;
    border-radius: 4px;
}


.output-data {
    font-family: monospace;
    white-space: pre-wrap;
    /* word-break: break-all; */
}


.output-field,
.output-call {
    font-size: 1.1em;
    font-family: "Atkinson Hyperlegible", sans-serif;
    font-optical-sizing: auto;
    font-weight: 700;
    font-style: normal;
    letter-spacing: 0.05em;
    padding-right: 8px;
}

.output-hash {
    font-size: 0.8em;
    letter-spacing: 0.06em;
    font-family: "Righteous", "McLaren", "IBM Plex Serif", sans-serif;
    font-weight: 400;
    font-style: normal;
}
/* ... */

